--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.14.1",
-        "pg": "^8.16.0"
+        "pg": "^8.16.0",
+        "zod": "^3.25.28"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
