--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.7",
@@ -22,13 +24,17 @@
         "i18next": "^25.2.0",
         "i18next-browser-languagedetector": "^8.1.0",
         "lucide-react": "^0.511.0",
+        "next-themes": "^0.4.6",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-hook-form": "^7.56.4",
         "react-i18next": "^15.5.2",
         "react-router-dom": "^7.6.0",
+        "sonner": "^2.0.3",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.7",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "zod": "^3.25.28"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
